[workspace]
resolver = "3"
members = ["crates/providers/reth", "crates/api", "crates/providers/providers", "crates/providers/geth", "crates/base", "crates/defi-backend"]


[workspace.dependencies]
base = { path = "crates/base" }
api = { path = "crates/api"}
providers = { path = "crates/providers/providers"}
providers-reth = { path = "crates/providers/reth" }
providers-geth = { path = "crates/providers/geth"}


futures = "0.3.31"
rustls = { version = "0.23.28", features = ["ring","logging","tls12"], default-features = false }
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = "0.27.0"


serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["raw_value"] }

op-revm = { version = "8.0.3", default-features = false }
revm = { version = "27.0.3", default-features = false }
alloy = { version = "1.0.1", features = ["full"] }
alloy-sol-types = "*"
